crates/lexer/src/lexer/snapshots/lexer__lexer__tests__number_fraction_exponent.snap
---
source: crates/lexer/src/lexer/tests.rs
snapshot_kind: text
---
Ok(
    [
        Lexed {
            kind: Token(
                NUMBER,
            ),
            range: 0..7,
        },
        Lexed {
            kind: Token(
                END_OF_FILE,
            ),
            range: 7..7,
        },
    ],
)
