crates/lexer/src/lexer/snapshots/lexer__lexer__tests__operator_purs.snap
---
source: crates/lexer/src/lexer/tests.rs
snapshot_kind: text
---
Ok(
    [
        Lexed {
            kind: Qualified(
                None,
                LEFT_ARROW,
            ),
            offset: 0,
        },
        Lexed {
            kind: Token(
                WHITESPACE,
            ),
            offset: 2,
        },
        Lexed {
            kind: Qualified(
                None,
                LEFT_ARROW,
            ),
            offset: 3,
        },
        Lexed {
            kind: Token(
                WHITESPACE,
            ),
            offset: 6,
        },
        Lexed {
            kind: Qualified(
                None,
                RIGHT_ARROW,
            ),
            offset: 7,
        },
        Lexed {
            kind: Token(
                WHITESPACE,
            ),
            offset: 9,
        },
        Lexed {
            kind: Qualified(
                None,
                RIGHT_ARROW,
            ),
            offset: 10,
        },
        Lexed {
            kind: Token(
                WHITESPACE,
            ),
            offset: 13,
        },
        Lexed {
            kind: Qualified(
                None,
                RIGHT_DOUBLE_ARROW,
            ),
            offset: 14,
        },
        Lexed {
            kind: Token(
                WHITESPACE,
            ),
            offset: 16,
        },
        Lexed {
            kind: Qualified(
                None,
                RIGHT_DOUBLE_ARROW,
            ),
            offset: 17,
        },
        Lexed {
            kind: Token(
                WHITESPACE,
            ),
            offset: 20,
        },
        Lexed {
            kind: Qualified(
                None,
                DOUBLE_COLON,
            ),
            offset: 21,
        },
        Lexed {
            kind: Token(
                WHITESPACE,
            ),
            offset: 23,
        },
        Lexed {
            kind: Qualified(
                None,
                DOUBLE_COLON,
            ),
            offset: 24,
        },
        Lexed {
            kind: Token(
                WHITESPACE,
            ),
            offset: 27,
        },
        Lexed {
            kind: Qualified(
                None,
                FORALL,
            ),
            offset: 28,
        },
        Lexed {
            kind: Token(
                WHITESPACE,
            ),
            offset: 31,
        },
        Lexed {
            kind: Qualified(
                None,
                EQUALS,
            ),
            offset: 32,
        },
        Lexed {
            kind: Token(
                WHITESPACE,
            ),
            offset: 33,
        },
        Lexed {
            kind: Qualified(
                None,
                DOT,
            ),
            offset: 34,
        },
        Lexed {
            kind: Token(
                WHITESPACE,
            ),
            offset: 35,
        },
        Lexed {
            kind: Qualified(
                None,
                BACKSLASH,
            ),
            offset: 36,
        },
        Lexed {
            kind: Token(
                WHITESPACE,
            ),
            offset: 37,
        },
        Lexed {
            kind: Qualified(
                None,
                PIPE,
            ),
            offset: 38,
        },
        Lexed {
            kind: Token(
                WHITESPACE,
            ),
            offset: 39,
        },
        Lexed {
            kind: Qualified(
                None,
                AT,
            ),
            offset: 40,
        },
        Lexed {
            kind: Token(
                END_OF_FILE,
            ),
            offset: 41,
        },
    ],
)
