crates/lexer/src/lexer/snapshots/lexer__lexer__tests__qualified_upper.snap
---
source: crates/lexer/src/lexer/tests.rs
snapshot_kind: text
---
Ok(
    [
        Lexed {
            kind: Qualified(
                Some(
                    (
                        MODULE_NAME,
                        0,
                    ),
                ),
                SOURCE_PROPER,
            ),
            offset: 7,
        },
        Lexed {
            kind: Token(
                WHITESPACE,
            ),
            offset: 11,
        },
        Lexed {
            kind: Qualified(
                Some(
                    (
                        MODULE_NAME,
                        12,
                    ),
                ),
                SOURCE_PROPER,
            ),
            offset: 22,
        },
        Lexed {
            kind: Token(
                END_OF_FILE,
            ),
            offset: 26,
        },
    ],
)
