crates/lexer/src/lexer/snapshots/lexer__lexer__tests__raw_string_empty.snap
---
source: crates/lexer/src/lexer/tests.rs
snapshot_kind: text
---
Ok(
    [
        Lexed {
            kind: Token(
                RAW_STRING,
            ),
            range: 0..6,
        },
        Lexed {
            kind: Token(
                END_OF_FILE,
            ),
            range: 6..6,
        },
    ],
)
